--- a/content/01_journal/Machine Learning Fundamentals.qmd
+++ b/content/01_journal/Machine Learning Fundamentals.qmd
@@ -1,5 +1,5 @@
 ---
-title: "01 Machine Learning Fundamentals"
+title: "Machine Learning Fundamentals"
 author: "Navaneet Sridhar"
 date: "2023-05-18"
 output: 
